examples/15.istio-on-gke/egress/app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hammer
  name: hammer
  namespace: istio-workload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hammer
  template:
    metadata:
      labels:
        app: hammer
    spec:
      containers:
      - image: gcr.io/nmiu-play/hammer
        imagePullPolicy: Always
        name: hammer
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        #   privileged: true
