examples/15.istio-on-gke/egress/toolbox.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: toolbox
  name: toolbox
  namespace: istio-workload
spec:
  containers:
    - image: gcr.io/nmiu-play/toolbox
      imagePullPolicy: Always
      name: toolbox
      resources:
        limits:
          cpu: 500m
          memory: 128Mi
        requests:
          cpu: 100m
          memory: 128Mi
