examples/15.istio-on-gke/egress/destination_rule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destinationrule-foo
  namespace: istio-workload
spec:
  host: svc-foo.istio-workload.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
