examples/15.istio-on-gke/egress/ext_ip_headless.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: svc-foo
  namespace: istio-workload
spec:
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443

---
kind: Endpoints
apiVersion: v1
metadata:
  name: svc-foo
  namespace: istio-workload
subsets:
  - addresses:
      - ip: 10.10.0.4
    ports:
      - name: http
        port: 80
      - name: https
        port: 443

---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: se-foo
  namespace: istio-workload
spec:
  hosts:
    - svc-foo.istio-workload
  addresses:
    - 10.10.0.4/32
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: TLS
  resolution: STATIC
  location: MESH_EXTERNAL
  endpoints:
    - address: 10.10.0.4

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-svc-foo
  namespace: istio-workload
spec:
  host: svc-foo.istio-workload.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
